Bug 430246 - File opens with background color inverted in background fill layer (white shows as black)
Summary: File opens with background color inverted in background fill layer (white sho...
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: layer styles (other bugs)
Version First Reported In: 4.4.2-beta1
Platform: Other macOS
: NOR normal
Target Milestone: ---
Assignee: Dmitry Kazakov
URL:
Keywords: regression, release_blocker
Depends on:
Blocks:
 
Reported: 2020-12-11 03:15 UTC by chrispbolduc
Modified: 2020-12-15 20:46 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
link to file that displays issue (82 bytes, text/plain)
2020-12-11 03:15 UTC, chrispbolduc
Details

Note You need to log in before you can comment on or make changes to this bug.
Description chrispbolduc 2020-12-11 03:15:00 UTC
Created attachment 133989 [details]
link to file that displays issue

SUMMARY
When file created in 4.4.1 is opened in 4.4.2 beta, the fill layer designated as Background shows an inverted color in the fill. A white fill shows as black. 

This can be restored by going to layer properties, where opening said menu reverts it to the normal setting or recreating the layer.

STEPS TO REPRODUCE
1. open file
2. 
3. 

OBSERVED RESULT


EXPECTED RESULT


SOFTWARE/OS VERSIONS
Windows: 
macOS: Big Sur
Linux/KDE Plasma: 
(available in About System)
KDE Plasma Version: 
KDE Frameworks Version: 
Qt Version: 

ADDITIONAL INFORMATION
Comment 1 Ahab Greybeard 2020-12-11 11:18:26 UTC
I don't see this happening with the 4.4.1 and 4.4.2-beta1 appimages on Linux, Debian 10.
Comment 2 Dmitry Kazakov 2020-12-15 20:03:00 UTC
I can reproduce that in krita/4.3 branch.
Comment 3 Dmitry Kazakov 2020-12-15 20:46:19 UTC
Git commit 6adc6bfbb180bcb0b7bff172452ef9ba256a2e8e by Dmitry Kazakov.
Committed on 15/12/2020 at 20:45.
Pushed by dkazakov into branch 'krita/4.3'.

Fix loading generator layers

When loading generator layers we write directly into its internal
filter, because KisFilterConfigutration does not have copying API.

We used a hack for assigning this filter again, but it stopped
working after generator layers got the ability to compare equality
of the filter configurations.
Related: bug 430244

M  +1    -1    plugins/impex/libkra/kis_kra_load_visitor.cpp

https://invent.kde.org/graphics/krita/commit/6adc6bfbb180bcb0b7bff172452ef9ba256a2e8e
Comment 4 Dmitry Kazakov 2020-12-15 20:46:56 UTC
Git commit aa86f66b0b0b9cd2d0a1fca0bda1ca6928462ccb by Dmitry Kazakov.
Committed on 15/12/2020 at 20:46.
Pushed by dkazakov into branch 'krita/4.4.2'.

Fix loading generator layers

When loading generator layers we write directly into its internal
filter, because KisFilterConfigutration does not have copying API.

We used a hack for assigning this filter again, but it stopped
working after generator layers got the ability to compare equality
of the filter configurations.
Related: bug 430244

M  +1    -1    plugins/impex/libkra/kis_kra_load_visitor.cpp

https://invent.kde.org/graphics/krita/commit/aa86f66b0b0b9cd2d0a1fca0bda1ca6928462ccb