Fix loading generator layers

When loading generator layers we write directly into its internal
filter, because KisFilterConfigutration does not have copying API.

We used a hack for assigning this filter again, but it stopped
working after generator layers got the ability to compare equality
of the filter configurations.

BUG:430246
BUG:430244